feat: list entity crud
