# internal/pkg/list/dto/create_list.go
@@ -3,9 +3,9 @@ package dto
 import "github.com/tommyatchiron/togolist/internal/pkg/list/entities"
 
 type CreateListInput struct {
-	Title       *string `json:"title" validate:"required"`
-	Description *string `json:"description" validate:"required"`
-	Priority    *int    `json:"priority"`
+	Title       *string `json:"title" validate:"required" example:"My List"`
+	Description *string `json:"description" validate:"required" example:"This is my list"`
+	Priority    *int    `json:"priority" example:"0"`
 }
 
 func (c *CreateListInput) ToEntity() *entities.List {
