# internal/pkg/list/dto/list.go
@@ -3,10 +3,10 @@ package dto
 import "github.com/tommyatchiron/togolist/internal/pkg/list/entities"
 
 type List struct {
-	ID          uint    `json:"id"`
-	Title       *string `json:"title"`
-	Description *string `json:"description"`
-	Priority    *int    `json:"priority"`
+	ID          uint    `json:"id" example:"1"`
+	Title       *string `json:"title" example:"My List"`
+	Description *string `json:"description" example:"This is my list"`
+	Priority    *int    `json:"priority" example:"0"`
 }
 
 func FromEntity(list *entities.List) *List {
